# web_scraping

./: README.md  pyproject.toml  scraper.py
web_scraper/: scraper.py
